--- a/static/css/app.css
+++ b/static/css/app.css
@@ -16,6 +16,10 @@ input {
     padding: 0;
 }
 
+input:focus {
+    background-color: rgb(255, 219, 99) !important;
+}
+
 h1 {
     font-family: 'Ibarra Real Nova', serif;
     text-align: center;
