revamped the validation check system. Check is now performed on client-side.

--- a/templates/index.html
+++ b/templates/index.html
@@ -185,10 +185,10 @@
                     <h4>HOW TO PLAY SUDOKU</h4>
                     <p class="mb-4">To successfully complete a Sudoku puzzle, fill all the empty cells so that every
                         row, column, and square contains all numbers from 1-9.
-                        A number can only appear once in each row, column, and square.</p>
+                        A number can only appear once in each row, column, and block.</p>
                     <h4>HOW TO USE SUDOKU SOLVER</h4>
                     <p>The purpose of <b>SUDOKU SOLVER</b> is to provide a solution for any Sudoku puzzle. Begin by
-                        entering an unsolved Sudoku puzzle, keeping in mind that
+                        entering an unsolved Sudoku puzzle. Keep in mind that
                         the input has to be a number between 1 and 9 (inclusively). Cells will turn red if the
                         input breaks any constraints or Sudoku rules.</p>
                     <p>
